# remire

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
bios/: Cargo.toml
bios/.cargo/: config.toml  linker.ld
bios/src/: clint.rs  config.rs  lang.rs  main.rs  stack.rs  trap.S  trap.rs  utils.rs
bios/src/legacy/: console.rs  exit.rs  mod.rs  uart.rs
bios/src/utils/: console.rs  device.rs  hsm_cell.rs  mod.rs  riscv_spec.rs  uart.rs
crates/allocator/: Cargo.toml
crates/allocator/src/: avl.rs  buddy.rs  lib.rs  stack.rs
crates/app/: Cargo.toml
crates/app/src/: lang_items.rs  lib.rs  linker.ld
crates/drivers/: Cargo.toml
crates/drivers/src/: console.rs  lib.rs
crates/kernel/: Cargo.toml  build.rs
crates/kernel/src/: allocator.rs  batch.rs  config.rs  console.rs  entry.S  lang.rs  link_app.S  loader.rs  main.rs  panic.rs  sbi.rs  stack.rs  sync.rs
crates/kernel/src/addr/: address.rs  frame.rs  mod.rs  page_table.rs  range.rs  space.rs  stack_allocator.rs
crates/kernel/src/mem/: avl.rs  buddy.rs  mod.rs
crates/kernel/src/mm/: mm_struct.rs  mod.rs  page_table.rs  translation.rs  vm_area.rs
crates/kernel/src/mm/frame/: guard.rs  manager.rs  mod.rs  types.rs
crates/kernel/src/mm/page/: mod.rs  range.rs  types.rs
crates/kernel/src/sched/: mod.rs  proc.rs  scheduler.rs  switch.rs  thread_info.rs
crates/kernel/src/services/: mod.rs  pm.rs
crates/kernel/src/syscall/: fs.rs  mem.rs  mod.rs  process.rs
crates/kernel/src/task/: context.rs  loader.rs  manager.rs  mod.rs  pid.rs  proc.rs  switch.S  switch.rs
crates/kernel/src/task/info/: context.rs  mm_guard.rs  mod.rs  task_struct.rs
crates/kernel/src/trap/: context.rs  mod.rs  timer.rs  trap.S
crates/ksync/: Cargo.toml
crates/ksync/src/: cell.rs  lib.rs  msg.rs  task.rs
crates/service/: Cargo.toml  build.rs
crates/service/src/: allocator.rs  config.rs  console.rs  lang_items.rs  lib.rs  msg.rs
crates/service/src/drivers/: block.rs  mod.rs  uart.rs
crates/service/src/fs/: inode.rs  mod.rs  msg.rs  stdio.rs
crates/service/src/msg/: handler.rs  id.rs  mod.rs
crates/service/src/syscall/: fs.rs  mod.rs  process.rs
crates/service/src/task/: manager.rs  mod.rs  pid.rs
crates/service/src/task/info/: mm_guard.rs  mod.rs  task_struct.rs
crates/user/src/: console.rs  lang.rs  lib.rs  syscall.rs
tools/packfs/: Cargo.toml
tools/xtask/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: main.rs
(+10 files in other folders)
