[package]
name = "kernel"
version = "0.1.0"
authors = [ "Conless Pan <conlesspan@outlook.com>" ]
edition = "2021"

[dependencies]
bitflags = "1.2.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
drivers = { path = "../drivers" }
sbi-rt = { version = "0.0.2", features = ["legacy"] }
spin = "0.9"
